--- a/nova.conf
+++ b/nova.conf
@@ -6439,7 +6439,7 @@ project_domain_name=Default
 # uml - <No description provided>
 # xen - <No description provided>
 # parallels - <No description provided>
-#virt_type=kvm
+virt_type=kvm
 
 #
 # Overrides the default libvirt URI of the chosen virtualization type.
